fix(header): add z-index to make it pop

--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -23,6 +23,8 @@
   overflow: auto;
   background: $sb-color-white;
   display: flex;
+  position: relative;
+  z-index: 1;
 
   &__title,
   &__info {
